fix: prevent modifying itemstack from ingredient